--- a/ProyectoFinalKermesse/Reportes/RptCatGastosDetalle.rdlc
+++ b/ProyectoFinalKermesse/Reportes/RptCatGastosDetalle.rdlc
@@ -104,7 +104,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Left</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>idCatGasto</rd:DefaultName>
@@ -137,7 +139,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -175,7 +177,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Left</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox1</rd:DefaultName>
@@ -208,7 +212,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -246,7 +250,9 @@
                               </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Left</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox3</rd:DefaultName>
@@ -279,7 +285,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -320,9 +326,9 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DsCategoriaGastos</DataSetName>
-        <Top>0.4742cm</Top>
-        <Left>0.88577cm</Left>
-        <Height>5.14934cm</Height>
+        <Top>0.7917cm</Top>
+        <Left>2.60556cm</Left>
+        <Height>5.14935cm</Height>
         <Width>14.36717cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
