--- a/ProyectoFinalKermesse/Reportes/RptGastoDetalle.rdlc
+++ b/ProyectoFinalKermesse/Reportes/RptGastoDetalle.rdlc
@@ -289,6 +289,13 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
+                              <Value>C$ </Value>
+                              <Style>
+                                <FontFamily>Roboto</FontFamily>
+                                <FontSize>16pt</FontSize>
+                              </Style>
+                            </TextRun>
+                            <TextRun>
                               <Value>=Fields!Monto.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
@@ -342,7 +349,7 @@
         <Top>0.80729cm</Top>
         <Left>1.37266cm</Left>
         <Height>3.31016cm</Height>
-        <Width>18.6525cm</Width>
+        <Width>18.65249cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -567,7 +574,6 @@
             </Image>
           </ReportItems>
           <OmitBorderOnPageBreak>true</OmitBorderOnPageBreak>
-          <Top>0cm</Top>
           <Height>3.15397cm</Height>
           <Width>21.46746cm</Width>
           <Style>
