--- a/ProyectoFinalKermesse/Reportes/RptParroquiaDetalle.rdlc
+++ b/ProyectoFinalKermesse/Reportes/RptParroquiaDetalle.rdlc
@@ -96,6 +96,7 @@
                             <TextRun>
                               <Value>ID</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
@@ -131,12 +132,13 @@
                             <TextRun>
                               <Value>=Fields!idParroquia.Value</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -170,6 +172,7 @@
                             <TextRun>
                               <Value>Nombre </Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
@@ -205,12 +208,13 @@
                             <TextRun>
                               <Value>=Fields!nombre.Value</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -244,6 +248,7 @@
                             <TextRun>
                               <Value>Dirección</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
@@ -279,12 +284,13 @@
                             <TextRun>
                               <Value>=Fields!direccion.Value</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -318,6 +324,7 @@
                             <TextRun>
                               <Value>Teléfono</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
@@ -353,12 +360,13 @@
                             <TextRun>
                               <Value>=Fields!telefono.Value</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -392,6 +400,7 @@
                             <TextRun>
                               <Value>Párroco</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
@@ -427,12 +436,13 @@
                             <TextRun>
                               <Value>=Fields!parroco.Value</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -466,6 +476,7 @@
                             <TextRun>
                               <Value>Sitio web </Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
                               </Style>
@@ -501,12 +512,13 @@
                             <TextRun>
                               <Value>=Fields!sitioWeb.Value</Value>
                               <Style>
+                                <FontFamily>Roboto</FontFamily>
                                 <FontSize>18pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -551,8 +563,8 @@
         </TablixRowHierarchy>
         <DataSetName>DsParroquia</DataSetName>
         <Top>0.77639cm</Top>
-        <Left>0.99899cm</Left>
-        <Height>6.20851cm</Height>
+        <Left>1.30909cm</Left>
+        <Height>6.20853cm</Height>
         <Width>17.58125cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
