--- a/ProyectoFinalKermesse/Reportes/RptProducto.rdlc
+++ b/ProyectoFinalKermesse/Reportes/RptProducto.rdlc
@@ -332,6 +332,12 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
+                              <Value>C$ </Value>
+                              <Style>
+                                <FontFamily>Roboto</FontFamily>
+                              </Style>
+                            </TextRun>
+                            <TextRun>
                               <Value>=Fields!precioVSugerido.Value</Value>
                               <Style>
                                 <FontFamily>Roboto</FontFamily>
@@ -382,7 +388,7 @@
         <Top>0.91313cm</Top>
         <Left>0.60537cm</Left>
         <Height>1.2cm</Height>
-        <Width>20.20522cm</Width>
+        <Width>20.20523cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -591,7 +597,6 @@
             </Image>
           </ReportItems>
           <OmitBorderOnPageBreak>true</OmitBorderOnPageBreak>
-          <Top>0cm</Top>
           <Height>3.15397cm</Height>
           <Width>21.46746cm</Width>
           <Style>
