--- a/ProyectoFinalKermesse/Views/Denominacions/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/Denominacions/Index.cshtml
@@ -36,6 +36,22 @@
         </div>
 
     }
+
+    <div class="dropdown" style=" left: 1000px">
+        <button class="btn btn-default dropdown-toggle" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <span class="glyphicon glyphicon-download-alt" aria-hidden="true" style="float: left;  color: white"></span>
+            &nbsp;
+            Exportar a
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><a href="#">@Html.ActionLink("Exportar a PDF", "VerReporteDenominacion", new { tipo = "PDF", valorBusq = Request.Form["ValorBusq"] })</a></li>
+            <li><a href="#">@Html.ActionLink("Exportar a Excel", "VerReporteDenominacion", new { tipo = "Excel", valorBusq = Request.Form["ValorBusq"] })</a></li>
+            <li><a href="#">@Html.ActionLink("Exportar a Word", "VerReporteDenominacion", new { tipo = "Word", valorBusq = Request.Form["ValorBusq"] })</a></li>
+
+        </ul>
+    </div>
+    <hr />
     <table class="table">
         <tr>
             <th>
@@ -75,7 +91,10 @@
                     <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
                     @Html.ActionLink("Detalles", "Details", new { id = item.idDenominacion }, new { @style = "color: #779FA1" }) |
                     <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idDenominacion }, new { @style = "color: #779FA1" })
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idDenominacion }, new { @style = "color: #779FA1" }) |
+                    <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+                    @Html.ActionLink("Ver Reporte", "VerReporteDenominacionDetalle", new { id = item.idDenominacion }, new { @style = "color: #779FA1" })
+
                 </td>
             </tr>
         }
