--- a/ProyectoFinalKermesse/Views/TasaCambioDets/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/TasaCambioDets/Index.cshtml
@@ -29,14 +29,28 @@
 
     @using (Html.BeginForm())
     {
-        <div class="container">
-            <p>
-                Buscar por Estado: @Html.TextBox("valorB")
-                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
-            </p>
-        </div>
+<div class="container">
+    <p>
+        Buscar por Estado: @Html.TextBox("valorB")
+        <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+    </p>
+</div>}
 
-    }
+    <div class="dropdown" style=" left: 1000px">
+        <button class="btn btn-default dropdown-toggle" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <span class="glyphicon glyphicon-download-alt" aria-hidden="true" style="float: left;  color: white"></span>
+            &nbsp;
+            Exportar a
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><a href="#">@Html.ActionLink("Exportar a PDF", "VerReporteUsuario", new { tipo = "PDF", valorB = Request.Form["ValorB"] })</a></li>
+            <li><a href="#">@Html.ActionLink("Exportar a Excel", "VerReporteUsuario", new { tipo = "Excel", valorB = Request.Form["ValorB"] })</a></li>
+            <li><a href="#">@Html.ActionLink("Exportar a Word", "VerReporteUsuario", new { tipo = "Word", valorB = Request.Form["ValorB"] })</a></li>
+
+        </ul>
+    </div>
+    <hr />
 
     <table class="table">
         <tr>
@@ -58,29 +72,30 @@
 
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.fecha)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.tipoCambio)
-                </td>
-                @*<td>
-                        @Html.DisplayFor(modelItem => item.estado)
-                    </td>*@
-                <td>
-                    @Html.DisplayFor(modelItem => item.tasaCambio)
-                </td>
-                <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.idTasaCambioDet }, new { @style = "color: #779FA1" })
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
-                    <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
-                    @Html.ActionLink("Detalles", "Details", new { id = item.idTasaCambioDet }, new { @style = "color: #779FA1" }) |
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.idTasaCambioDet }, new { @style = "color: #779FA1" })
-                </td>
-            </tr>
-        }
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.fecha)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.tipoCambio)
+    </td>
+    @*<td>
+            @Html.DisplayFor(modelItem => item.estado)
+        </td>*@
+    <td>
+        @Html.DisplayFor(modelItem => item.tasaCambio)
+    </td>
+    <td>
+        @Html.ActionLink("Editar", "Edit", new { id = item.idTasaCambioDet }, new { @style = "color: #779FA1" })
+        <span class="glyphicon glyphicon-edit" aria-hidden="true" style="float: left; color: #779FA1"></span>|
+        <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="color: #779FA1"></span>
+        @Html.ActionLink("Detalles", "Details", new { id = item.idTasaCambioDet }, new { @style = "color: #779FA1" }) |
+        <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
+        @Html.ActionLink("Eliminar", "Delete", new { id = item.idTasaCambioDet }, new { @style = "color: #779FA1" }) |
+        <span class="glyphicon glyphicon-file" aria-hidden="true" style="color: #779FA1"></span>
+        @Html.ActionLink("Ver Reporte", "VerReporteUsuarioDetalle", new { id = item.idTasaCambioDet }, new { @style = "color: #779FA1" })
+    </td>
+</tr>}
 
         <p>
             <button type="button" class="btn-lg" style="border-block-color: #779FA1; background-color: #779FA1">
